Fixed an alignment issue with search input bar.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -732,7 +732,8 @@ form {
 
     input[type=text] {
         font-size: 20px;
-        line-height: 35px;
+        line-height: 34px;
+        margin-top: 3px;
     }
 
     .search-controls {
